[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dyvine"
version = "1.0.0"
description = "A high-performance Python API for interacting with Douyin content"
requires-python = ">=3.12"
authors = [
    { name = "Bill Duke", email = "billduke@memenow.xyz" }
]
dependencies = [
    # Core dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # External integrations
    "boto3>=1.34.0",
    "f2>=0.0.1.7",
    "httpx>=0.24.0",
    
    # Utilities
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270",
    "pre-commit>=3.3.3",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --asyncio-mode=auto"
markers = [
    "asyncio: mark test as async/await test"
]

[tool.hatch.build.targets.wheel]
packages = ["src/dyvine"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
